--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,12 +4,15 @@ jobs:
   test:
     name: Unit tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [ 8, 13, 15 ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '15'
+          java-version: ${{ matrix.version }}
           distribution: 'adopt'
       - name: Test
         run: mvn test
