--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>java-invoice</name>
     <groupId>pl.edu.agh.mwo.invoice</groupId>
     <artifactId>mwo-invoice</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24</version>
 
     <url>http://maven.apache.org</url>
     <packaging>jar</packaging>
@@ -22,8 +22,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>3.1</source>
+                    <target>3.1</target>
                 </configuration>
             </plugin>
         </plugins>
